--- a/dashboard.html
+++ b/dashboard.html
@@ -18,13 +18,13 @@
       <div class="menu-toggle"><i class="fas fa-bars"></i></div>
       <nav>
         <ul id="nav-menu">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#how">How It Works</a></li>
-          <li><a href="#students">For Students</a></li>
-          <li><a href="#clients">For Clients</a></li>
-          <li><a href="#pricing">Pricing</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li><a href="#" id="logout">Log Out</a></li>
+          <li><a href="dashboard.html">Home</a></li>
+          <li><a href="for-students.html">For Students</a></li>
+          <li><a href="for-client.html">For Clients</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="index.html">Log Out</a></li>
         </ul>
       </nav>
     </div>
