--- a/for-students.html
+++ b/for-students.html
@@ -1,79 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>For Students | Skill Linkr</title>
-  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="student.css">
 </head>
 <body>
-  <!-- Navbar (same as index.html) -->
- <header>
-  <div class="menu-toggle">&#9776; </div>
-      <div class="container">
-   <div class="logo">
-  <img src="_Skill Linkr Personal Logo (1).png" alt="Logo">
-</div>
+  <!-- Header -->
+  <header>
+    <div class="container">
+      <div class="logo">
+        <img src="_Skill Linkr Personal Logo (1).png" alt="Skill Linkr Logo">
+      </div>
+      <div class="menu-toggle"><i class="fas fa-bars"></i></div>
       <nav>
-        <ul>
-          <li><a href="dashboard.html">Home</a></li>
-          <li><a href="for-students.html">For Students</a></li>
-          <li><a href="for-client.html">For Clients</a></li>
+        <ul id="nav-menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="for-students.html" class="active">For Students</a></li>
+          <li><a href="for-clients.html">For Clients</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="index.html">Log Out</a></li>
+          <li><a href="#" id="logout">Log Out</a></li>
         </ul>
       </nav>
     </div>
-</header>
-  </body>
+  </header>
 
   <!-- Hero Section -->
-  <section class="hero-student">
-    <h1>Grow Your Freelance Career</h1>
-    <p>Get real projects, earn experience, and build your portfolio with Skill Linkr.</p>
-    <a href="contact.html" class="btn">Join Now</a>
+  <section id="hero" class="hero-student">
+    <div class="container">
+      <div class="hero-content">
+        <h1>Grow Your Freelance Career as a Student</h1>
+        <p>Join 5000+ students earning real money while building professional portfolios and gaining industry experience.</p>
+        <div class="hero-buttons">
+          <a href="#signup" class="btn-primary">Start Freelancing Free</a>
+          <a href="#features" class="btn-secondary">See How It Works</a>
+        </div>
+      </div>
+      <div class="hero-stats">
+        <div class="stat">
+          <h3>₹5L+</h3>
+          <p>Earned by Students</p>
+        </div>
+        <div class="stat">
+          <h3>2K+</h3>
+          <p>Projects Completed</p>
+        </div>
+        <div class="stat">
+          <h3>4.9⭐</h3>
+          <p>Average Rating</p>
+        </div>
+      </div>
+    </div>
   </section>
 
-  <!-- Benefits Section -->
-  <section class="benefits">
-    <h2>Why Join Skill Linkr?</h2>
-    <div class="benefit-grid">
-      <div class="card">
-        <h3>✅ Real-World Projects</h3>
-        <p>Work directly with real clients and strengthen your skills.</p>
-      </div>
-      <div class="card">
-        <h3>💼 Build Your Portfolio</h3>
-        <p>Showcase your best work and impress future employers.</p>
-      </div>
-      <div class="card">
-        <h3>💸 Earn While You Learn</h3>
-        <p>Get paid fairly for every project you complete.</p>
+  <!-- Features Section -->
+  <section id="features" class="features">
+    <div class="container">
+      <h2>Why 5000+ Students Choose Skill Linkr</h2>
+      <div class="cards">
+        <div class="card feature-card">
+          <div class="card-icon">
+            <i class="fas fa-project-diagram"></i>
+          </div>
+          <h3>Real Client Projects</h3>
+          <p>Work on live projects from startups and businesses. Add professional experience to your resume.</p>
+        </div>
+        <div class="card feature-card">
+          <div class="card-icon">
+            <i class="fas fa-briefcase"></i>
+          </div>
+          <h3>Portfolio Ready</h3>
+          <p>Every completed project becomes portfolio material. Impress recruiters with real work samples.</p>
+        </div>
+        <div class="card feature-card">
+          <div class="card-icon">
+            <i class="fas fa-rupee-sign"></i>
+          </div>
+          <h3>Fair Student Pricing</h3>
+          <p>Earn ₹500-₹5000 per project. Perfect rates for students building their careers.</p>
+        </div>
+        <div class="card feature-card">
+          <div class="card-icon">
+            <i class="fas fa-shield-alt"></i>
+          </div>
+          <h3>Secure Payments</h3>
+          <p>Get paid securely after client approval. No risk, guaranteed payment system.</p>
+        </div>
       </div>
     </div>
   </section>
+
   <!-- How It Works -->
-  <section class="steps">
-    <h2>How It Works</h2>
-    <div class="step-grid">
-      <div class="card">
-        <h3>✅ Sign up as a student freelancer.</h3>
-        <p>Work directly with real clients and strengthen your skills.</p>
-      </div>
-      <div class="card">
-        <h3>💼 Browse available projects.</h3>
-        <p>Showcase your best work and impress future employers.</p>
-      </div>
-      <div class="card">
-        <h3>💸 Submit your work and get paid instantly.</h3>
-        <p>Get paid fairly for every project you complete.</p>
+  <section class="steps-section alt-bg">
+    <div class="container">
+      <h2>Start Earning in 3 Simple Steps</h2>
+      <div class="step-container">
+        <div class="step">
+          <div class="step-number">1</div>
+          <h3>Create Profile</h3>
+          <p>Sign up free and build your student profile with skills, projects, and availability.</p>
+        </div>
+        <div class="step">
+          <div class="step-number">2</div>
+          <h3>Browse Projects</h3>
+          <p>Find projects matching your skills. Submit proposals with your rates and timeline.</p>
+        </div>
+        <div class="step">
+          <div class="step-number">3</div>
+          <h3>Get Hired & Paid</h3>
+          <p>Complete work, get client approval, and receive secure payment instantly.</p>
+        </div>
       </div>
     </div>
   </section>
+
+  <!-- Student Testimonials -->
+  <section class="testimonials">
+    <div class="container">
+      <h2>What Students Are Saying</h2>
+      <div class="testimonial-grid">
+        <div class="testimonial-card">
+          <div class="stars">★★★★★</div>
+          <p>"Earned ₹25,000 in 2 months while studying! Got real projects and portfolio samples."</p>
+          <div class="author">
+            <img src="https://via.placeholder.com/50x50/667eea/fff?text=AS" alt="Aarav S">
+            <div>
+              <h4>Aarav Sharma</h4>
+              <span>Computer Science, IIT Delhi</span>
+            </div>
+          </div>
+        </div>
+        <div class="testimonial-card">
+          <div class="stars">★★★★★</div>
+          <p>"Perfect for students! Flexible timings and fair pay. Built my entire portfolio here."</p>
+          <div class="author">
+            <img src="https://via.placeholder.com/50x50/ff6b6b/fff?text=PS" alt="Priya S">
+            <div>
+              <h4>Priya Singh</h4>
+              <span>Design Student, NID</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CTA Section -->
+  <section id="signup" class="cta">
+    <div class="container">
+      <h2>Ready to Start Your Freelance Journey?</h2>
+      <p>Join thousands of students already earning while learning.</p>
+      <div class="cta-buttons">
+        <a href="#" class="btn-primary btn-large">Create Free Account</a>
+        <a href="#features" class="btn-secondary btn-large">Learn More</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
   <footer>
-    <p>© 2025 Skill Linkr | Connecting Student Freelancers with Clients</p>
+    <div class="container footer-container">
+      <div class="footer-left">
+        <h4><span>Skill</span> Linkr</h4>
+        <p>Student Freelancing Platform | Connecting talent with opportunities</p>
+      </div>
+      <div class="footer-right">
+        <p>Follow us:</p>
+        <div class="social-icons">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://www.instagram.com/radheyvallabh8/" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>© 2026 Skill Linkr — All rights reserved.</p>
+    </div>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
+
