--- a/for-students.html
+++ b/for-students.html
@@ -20,7 +20,7 @@
         <ul id="nav-menu">
           <li><a href="index.html">Home</a></li>
           <li><a href="for-students.html" class="active">For Students</a></li>
-          <li><a href="for-clients.html">For Clients</a></li>
+          <li><a href="for-client.html">For Clients</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="about.html">About Us</a></li>
