--- a/for-students.html
+++ b/for-students.html
@@ -18,7 +18,7 @@
       <div class="menu-toggle"><i class="fas fa-bars"></i></div>
       <nav>
         <ul id="nav-menu">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="dashboard.html">Home</a></li>
           <li><a href="for-students.html" class="active">For Students</a></li>
           <li><a href="for-client.html">For Clients</a></li>
           <li><a href="pricing.html">Pricing</a></li>
