--- a/for-client.html
+++ b/for-client.html
@@ -19,7 +19,7 @@
       <div class="menu-toggle"><i class="fas fa-bars"></i></div>
       <nav>
         <ul id="nav-menu">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="dashboard.html">Home</a></li>
           <li><a href="for-students.html">For Students</a></li>
           <li><a href="for-clients.html" class="active">For Clients</a></li>
           <li><a href="pricing.html">Pricing</a></li>
